# lite

./: .gitignore  CMakeLists.txt  CMakeLists_standalone_sample.txt  CheckTes.C  Doxyfile.in  annotated.html  build_2wrap_2R_2RLiTe_2src_2ttessel_8h.html  build_2wrap_2R_2RLiTe_2src_2ttessel_8h_source.html  classEnergy-members.html  classEnergy.html  classLineTes-members.html  classLineTes.html  classLineTes_1_1Seg-members.html  classLineTes_1_1Seg.html  classLineTes_1_1Seg__list-members.html  classLineTes_1_1Seg__list.html  classLineTes_1_1Seg__sublist-members.html  classLineTes_1_1Seg__sublist.html  classLineTes__halfedge-members.html  classLineTes__halfedge.html  classPLInferenceNOIS-members.html  classPLInferenceNOIS.html  classPolygons.html  classPseudoLikDiscrete-members.html  classPseudoLikDiscrete.html  classSMFChain-members.html  classSMFChain.html  classTTessel-members.html  classTTessel.html  classTTessel_1_1Flip-members.html  classTTessel_1_1Flip.html  classTTessel_1_1Merge-members.html  classTTessel_1_1Merge.html  classTTessel_1_1Modification-members.html  classTTessel_1_1Modification.html  classTTessel_1_1Split-members.html  classTTessel_1_1Split.html  classes.html  dir_092118014f083c789fbe27ebc66fca7b.html  dir_0e27924026d21dcb6488e50c248fe1b3.html  (+110 more)
applications/: CMakeLists.txt  checkACS.cpp  count_stl.C
demos/: CMakeLists.txt  pseudo_lik_inference.cpp  sim_acs.cpp
docfiles/: index.md  installation.md  make_images.txt  overview.md  rlite.md  start.md  ttessellation.fig
include/: CMakeLists.txt  random_lines.h  ttessel.h
lib/: CMakeLists.txt  polygon_importer.cpp  remove_xvertices.cpp  ttessel.cpp
project_tools/: publish  release
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  functions_0.js  functions_10.js  functions_12.js  functions_13.js  functions_2.js  functions_3.js  (+41 more)
tests/: CMakeLists.txt  check_lite.cpp  check_lite.h  plot_ttessellation.R
wrap/R/: CMakeLists.txt  DESCRIPTION.in  rlite_makevars.in
wrap/R/RLiTe/: DESCRIPTION  NAMESPACE  cleanup  configure.ac
wrap/R/RLiTe/R/: lite.R  polygon_importer.R
wrap/R/RLiTe/demo/: 00Index  smf.simulation.R
wrap/R/RLiTe/inst/: tessellation_data.txt
wrap/R/RLiTe/man/: RLiTe-package.Rd  getSMFSamplingPeriod.Rd  linetes-class.Rd  modelacuteangles.Rd  modelareasangles.Rd  modelcrtt.Rd  modelsquaredareas.Rd  rcpp_smfchain_class.Rd  smfchain-class.Rd  ttessel-class.Rd
wrap/R/RLiTe/src/: Makevars.win.in  rlite_module.cpp
